test/optimizations/inline/indirectCall.good
indirectCall.chpl:11: error: Detected a cycle back to inlined function 'bar' while inlining 'foo'
